--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <li><img src="assets//images/thumb3.png" alt="" onclick="imgSlider('assets/images/img3.png');changeCircleColor('#d752b1')"></li>
     </ul>
     <ul class="sci">
+      <li><a href="#"><img src="assets/images/facebook.png" alt=""></a></li>
       <li><a href="#"><i class="ico fab fa-facebook-f"></i></a></li>
-      <li><a href="#"><img src="assets/images/instagram.png" alt=""></a></li>
       <li><a href="#"><img src="assets/images/twitter.png" alt=""></a></li>
     </ul>
     <!-- <div class="sci">
